--- a/front/pages/gm/mail-add.html
+++ b/front/pages/gm/mail-add.html
@@ -228,6 +228,7 @@
   </div>
   <script src="/lib/layui/layui.js"></script>
   <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
+  <script src="/js/common.js"></script>
   <script>
     layui.use(['form', 'okLayer', 'okUtils', 'upload', 'element'], function () {
       let form = layui.form;
@@ -451,9 +452,7 @@
         }
       });
 
-      //监听提交
-      var mailparam;
-      form.on('submit(test)', function (data) {
+      function getParam() {
         let itemstr = "";
         let itemid1 = iItemID1.getValue("valueStr");
         if (itemid1 != "") {
@@ -485,9 +484,61 @@
         let sContent = $("#zh-CNContent").val();
         let lang = {};
         lang["en"] = {"sFrom": $("#enFrom").val(),"sTitle": $("#enTitle").val(),"sContent": $("#enContent").val()};
+
         let sLangContent = okUtils.jsonToString(lang);
-        let param = {sFrom: sFrom, sTitle: sTitle, sContent: sContent, sLangContent: sLangContent, iCoin: data.field.iCoin, iDiamond: data.field.iDiamond, iDelTimeAfterOpen: data.field.iDelTimeAfterOpen, iDelTimeAfterRcvAttach: data.field.iDelTimeAfterRcvAttach, iZoneId: data.field.zoneid, iRoleId: data.field.iRoleId, items: itemstr};
-        okUtils.ajax("/api/gm/mail/testsend", "post", param, true).done(function (response) {
+
+        let iCoin = $('input[name="iCoin"]').val();
+        let iDiamond = $('input[name="iDiamond"]').val();
+        let iDelTimeAfterOpen = $('select[name="iDelTimeAfterOpen"]').val();
+        let iDelTimeAfterRcvAttach = $('select[name="iDelTimeAfterRcvAttach"]').val();
+        let iZoneId = zoneSelect1.getValue('valueStr');
+        let iRoleId = $('input[name="iRoleId"]').val();
+        let param = {sFrom: sFrom, sTitle: sTitle, sContent: sContent, sLangContent: sLangContent, iCoin: iCoin, iDiamond: iDiamond, iDelTimeAfterOpen: iDelTimeAfterOpen, iDelTimeAfterRcvAttach: iDelTimeAfterRcvAttach, iZoneId: iZoneId, iRoleId: iRoleId, items: itemstr};
+
+        return {'p': param, 'lang': lang};
+      }
+
+      function cmpParam(old, n) {
+        for (k in old) {
+          if (k == "zoneids" || k == "iZoneId" || k == "iRoleId") continue;
+          if (old[k] != n[k]) {
+            return false;
+          }
+        }
+        return true
+      }
+
+      //监听提交
+      var mailparam;
+      form.on('submit(test)', function (data) {
+        let param = getParam();
+        if (!checkLang(param.lang)) {
+          okLayer.confirm('除了默认语言还有语言未填,是否继续提交?', function(index) {
+            okUtils.ajax("/api/gm/mail/testsend", "post", param.p, true).done(function (response) {
+              okLayer.greenTickMsg(response.data, function () {
+                $("#send").attr("class", "layui-btn");
+                $("#send").attr("disabled",false);
+                $("#file").attr("class", "layui-btn");
+                $("#file").attr("disabled",false);
+                zoneSelect1.update({
+                  disabled: true,
+                });
+                zoneSelect2.update({
+                  layVerify: true,
+                  disabled: false,
+                });
+                mailparam = param.p;
+              });
+            }).fail(function (error) {
+              console.log(error);
+            });
+            layer.close(index);
+          });
+
+          return false;
+        }
+
+        okUtils.ajax("/api/gm/mail/testsend", "post", param.p, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             $("#send").attr("class", "layui-btn");
             $("#send").attr("disabled",false);
@@ -500,15 +551,20 @@
               layVerify: true,
               disabled: false,
             });
-            mailparam = param;
+            mailparam = param.p;
           });
         }).fail(function (error) {
           console.log(error);
         });
+
         return false;
       });
 
       $('#send').click(function () {
+        if (!cmpParam(mailparam, getParam().p)) {
+          okLayer.redCryMsg("检测到邮件内容发送改变，请重新发送测试邮件");
+          return;
+        }
         mailparam.zoneids = zoneSelect2.getValue('valueStr');
         if (mailparam.zoneids == "") {
           mailparam.filepath = $("input[name='filepath']").val();
