--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -50,8 +50,8 @@
               return ret;
             }
           },
-          { field: "sContent", title: "内容" },
-          { field: "sHtmlContent", title: "html内容" },
+          { field: "sContent", title: "内容", templet: function(d) { return d.iType != 2 ? d.sContent : '-';} },
+          { field: "sHtmlContent", title: "html内容", templet: function(d) { return d.iType != 2 ? d.sHtmlContent : '-';} },
           { field: "sBeginTime", title: "开始时间", align: "center", width: 180 },
           { field: "sEndTime", title: "结束时间", align: "center", width: 180 },
           {
