--- a/front/pages/gm/map-add.html
+++ b/front/pages/gm/map-add.html
@@ -39,6 +39,34 @@
         </div>
       </div>
 
+        <div class="layui-form-item">
+            <label class="layui-form-label">DB服务器</label>
+            <div class="layui-input-inline">
+                <input type="text" name="dbHost" class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">DB端口</label>
+            <div class="layui-input-inline">
+                <input type="text" name="dbPort" class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">DB用户名</label>
+            <div class="layui-input-inline">
+                <input type="text" name="dbUser" class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">DB密码</label>
+            <div class="layui-input-inline">
+                <input type="text" name="dbPwd" class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
+
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
