--- a/front/pages/game/real-map.html
+++ b/front/pages/game/real-map.html
@@ -101,9 +101,13 @@
     });
 
     okUtils.ajax("/api/gm/zone/simplelist", "get", {map: true}, false).done(function (response) {
+      let mapid = 0;
+      if (response.data["map"] != null) {
+        mapid = response.data["map"][0].iZoneId;
+      }
       zoneSelect.update({
         data: response.data["map"],
-        initValue: [10001],
+        initValue: [mapid],
       });
       refreshMap(zoneSelect.getValue('valueStr'));
     }).fail(function (error) {
