--- a/front/pages/stat/recharge-track.html
+++ b/front/pages/stat/recharge-track.html
@@ -85,10 +85,10 @@
 
 		let rechargeTable = table.render({
 			elem: "#tableId",
-      url: "/api/stat/recharge/track",
       text: {
         none: '暂无相关数据',
       },
+      data: [],
 			limit: 30,
 			page: true,
       cellMinWidth: 78,
@@ -218,6 +218,7 @@
 
     form.on("submit(search)", function (data) {
       rechargeTable.reload({
+        url: "/api/stat/recharge/track",
         where: data.field,
         page: {
           curr: 1,
