--- a/front/pages/game/fight-verify-err.html
+++ b/front/pages/game/fight-verify-err.html
@@ -84,8 +84,8 @@
               case 12: ret = '无尽章节挑战'; break;
               case 13: ret = '梦境试炼'; break;
               case 14: ret = '隐秘地牢'; break;
-              case 15: ret = '困难关卡推图'; break;
-              case 16: ret = '困难章节挑战'; break;
+              case 15: ret = '困难章节挑战'; break;
+              case 16: ret = '困难关卡挑战'; break;
               case 17: ret = '无尽关卡挑战'; break;
               default:
                 ret = d.fight_type;
