--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -117,6 +117,7 @@
     </form>
   </div>
   <script src="/lib/layui/layui.js"></script>
+  <script src="/js/common.js"></script>
   <script>
     zhCNeditor = getDefaultEditor('#zh-CN');
     ENeditor = getDefaultEditor('#en');
