--- a/front/pages/system/user-edit.html
+++ b/front/pages/system/user-edit.html
@@ -19,13 +19,13 @@
 	  <div class="layui-form-item">
 			  <label class="layui-form-label">密码</label>
 			  <div class="layui-input-block">
-			  	<input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input" lay-verify="password|required" lay-verType="tips">
+			  	<input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input" lay-verify="password" lay-verType="tips">
 			  </div>
 		</div>
 	  <div class="layui-form-item">
 			  <label class="layui-form-label">确认密码</label>
 			  <div class="layui-input-block">
-			  	<input type="password" name="password2" placeholder="请再次输入密码" autocomplete="off" class="layui-input" lay-verify="password2|required" lay-verType="tips">
+			  	<input type="password" name="password2" placeholder="请再次输入密码" autocomplete="off" class="layui-input" lay-verify="password2" lay-verType="tips">
 			  </div>
 		</div>
 	  <div class="layui-form-item">
@@ -34,6 +34,13 @@
           <div id="roleSelect"></div>
 			  </div>
 		</div>
+	  <div class="layui-form-item">
+		  <label class="layui-form-label">允许GM命令(一行一个)</label>
+		  <div class="layui-input-block">
+          <textarea name="allowGmCmd" placeholder="请编辑内容" class="layui-textarea" lay-verify="required"
+					lay-verType="tips"></textarea>
+		  </div>
+	  </div>
 		<div class="layui-form-item">
 			<div class="layui-input-block">
 				<button class="layui-btn" lay-submit lay-filter="add">修改</button>
@@ -70,6 +77,7 @@
 
     $('input[name=id]').val(parent.userdata.id);
     $('input[name=username]').val(parent.userdata.username);
+    $('textarea[name=allowGmCmd]').val(parent.userdata.allowGmCmd);
     roleSelect.setValue([parent.userdata.role]);
 
     form.verify({
@@ -84,10 +92,13 @@
           return '用户名不能全为数字';
         }
       },
-      password: [
-        /^[\S]{6,14}$/
-        ,'密码必须6到14位，且不能出现空格'
-      ],
+      password: function(value,item){
+      	if(value!==""){
+      		if(!new RegExp("^[\\S]{6,14}$").test(value)){
+      			return '密码必须6-14位，且不能有空格';
+			}
+		}
+	  },
       password2: function(value, item) {
         if (value != $("input[name='password']").val()) {
           return '两次输入密码不一致';
