--- a/front/pages/gm/cdk-add.html
+++ b/front/pages/gm/cdk-add.html
@@ -82,7 +82,7 @@
       <div class="layui-form-item" id="rewardinfo">
         <label class="layui-form-label">自定义奖励</label>
         <div class="layui-input-block">
-          <textarea name="sRewardInfo" class="layui-textarea" placeholder="1:邮件id:道具id*数量,道具id*数量" lay-verify="required" lay-verType="tips"></textarea>
+          <textarea name="sRewardInfo" class="layui-textarea" placeholder="1:邮件id:道具id*数量,道具id*数量-概率" lay-verify="required" lay-verType="tips"></textarea>
         </div>
       </div>
 
