--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -63,7 +63,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">自定义奖励</label>
         <div class="layui-input-block">
-          <textarea name="sRewardInfo" placeholder="1:邮件id:道具id*数量,道具id*数量[-概率(万分比,不填为百分百)]" class="layui-textarea"></textarea>
+          <textarea name="sRewardInfo" placeholder="1:邮件id:道具id*数量[-概率(万分比,不填为百分百)],道具id*数量[-概率(万分比,不填为百分百)]" class="layui-textarea"></textarea>
         </div>
       </div>
 
